syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.radishframework.radish.discovery.core";
option java_outer_classname = "DiscoveryProto";

package com.radishframework.radish.discovery.core;

service Discovery {
    rpc Discover (DiscoverRequest) returns (DiscoverResponse) { }
}

message DiscoverRequest {
    string desc_name = 1;
}

message DiscoverResponse {
    bool success = 1;
    repeated InstanceInfo instance = 2;
}

message InstanceInfo {
    string ip = 1;
    int32 port = 2;
    int32 operation_port = 3;
    string hostname = 4;
    string app_name = 5;
    map<string, string> metadata = 6;
}


